[package]
name = "hashtable"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
debug = true

[dependencies]
ahash = "0.7.6"
arrayvec = "0.7.2"
bumpalo = "3.10.0"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
primitive-types = "0.11.1"

[dev-dependencies]
rand = "0.8.5"
