[package]
name = "hashtable"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
debug = true
panic = "abort"

[dependencies]
ahash = "0.7.6"
arrayvec = "0.7.2"
bumpalo = { version = "3.10.0", features = ["allocator_api"] }
cfg-if = "1.0.0"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
libc = "0.2.132"
memoffset = "0.6.5"
num = "0.4.0"
primitive-types = "0.11.1"
smallvec = "1.9.0"

[dev-dependencies]
rand = "0.8.5"
common-hashtable = { path = "../benchmark/common-hashtable" }
