[package]
name = "benchmarker"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
panic = "abort"

[dependencies]
ahash = "0.7.6"
clap = { version = "3.2.8", features = ["derive"] }
common-hashtable = { path = "../common-hashtable" }
hashbrown = { version = "0.12.1" }
hashtable = { path = "../../hashtable" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
